--- a/profile.html
+++ b/profile.html
@@ -53,8 +53,8 @@
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="/index.html" class="nav-link scrollto "><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="/profile.html" class="nav-link scrollto active"><i class="bx bx-user"></i> <span>Profile</span></a></li>
+          <li><a href="/portfolio/index.html" class="nav-link scrollto "><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li><a href="/portfolio/profile.html" class="nav-link scrollto active"><i class="bx bx-user"></i> <span>Profile</span></a></li>
          
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
           <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
