--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Elakkiya C</h1>
-      <p>I'm <span class="typed" data-typed-items="Student,Frontend Developer, Tutor"></span></p>
+      <h1>WELCOME!!!</h1>
+      <p>I'm <span class="typed" data-typed-items="Elakkiya,Student,Frontend Developer, Tutor"></span></p>
     </div>
   </section><!-- End Hero -->
 
