--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Elakkiya Profile</title>
+  <title>Elakkiya's Profile</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -82,7 +82,7 @@
       </div>
       <div class="credits">
        
-        Designed by <a href="https://bootstrapmade.com/">Elakkiya Chakravarthi</a>
+        Designed by <a href="">Elakkiya Chakravarthi</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
