--- a/profile.html
+++ b/profile.html
@@ -84,7 +84,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Student &amp;Frontend Devloper</h3>
             <p class="fst-italic">
-              Student at Thanthai Periyar Government Institute of Technology.
+              Student at Alagappa Chettiar Government college of Engineering and Technology.
             </p>
             <div class="row">
               <div class="col-lg-6">
