--- a/profile.html
+++ b/profile.html
@@ -242,10 +242,10 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Internship</h4>
-              <h5>04/2023 - Present</h5>
+              <h5>04/2023 - 08/2023</h5>
               
               <ul>
-                <li>Currently developing a admin dashboard for a hotel.</li>
+                <li>Developed a admin dashboard for a hotel.</li>
                 <li>It has the PHP CRUD functionality which can add , update , delete , also search functionality.</li>
                 <li>Supervises the entry of exits of customers from the hotel.</li>
                 <p><em>Tech Stack used : Bootstrap 5 , PHP , MySQL , Javascript</em></p>
