--- a/profile.html
+++ b/profile.html
@@ -296,7 +296,7 @@
       </div>
       <div class="credits">
       
-        Designed by <a href="https://bootstrapmade.com/">Elakkiya Chakravarthi</a>
+        Designed by <a href="">Elakkiya Chakravarthi</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
